fix: remove overflow-y property from body-element

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -29,7 +29,6 @@ body {
 	
 	background-color: #FFFFFF;
 	overflow-x: clip;
-	overflow-y: auto;
 }
 
 div, header, main, footer {
